--- a/src/main/resources/static/css/plugins/map.css
+++ b/src/main/resources/static/css/plugins/map.css
@@ -1,45 +1,150 @@
-/* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
 #map {
-	height: 100%;
+	height: 650px;
 	width: 100%;
-	position:static;
-	z-index:0;
+	position: static;
+	z-index: 0;
 }
-/* Optional: Makes the sample page fill the window. */
-html, body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
+#page-wrapper {
+	padding: 0px !important;
+	padding-left: 71px !important;
 }
-
-.map-box{
-	height:100%;
-	position:relative;
+.map-box {
+	height: 650px;
+	width: 100%;
+	position: relative;
 }
-
-#mapouter {
-	margin-left: 306px;
-	height: 500px;
-	width: 1000px;
-}
-
-#map {
-	height: 100%;
-}
-
-html, body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	
-.form-box{
+.form-box {
 	position: absolute;
-	top:0;
-	height:100%;
-	width:30%;
-	right:0;
-	background-color:rgba(255,255,255,0.8);
-	z-index:10;
-	padding-top:50px;
+	top: 0;
+	height: 650px;
+	width: 33%;
+	right: 0px;
+	background-color: rgba(255, 255, 255, 0.8);
+	z-index: 10;
+	padding-top: 0px;
+}
+#dMap {
+    background-color: white!important;
+    color: #545454!important;
+    border: 1px solid #898989;
+    border-top-color: rgb(137, 137, 137);
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-right-color: rgb(137, 137, 137);
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-bottom-color: rgb(137, 137, 137);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-color: rgb(137, 137, 137);
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-image-source: initial;
+    border-image-slice: initial;
+    border-image-width: initial;
+    border-image-outset: initial;
+    border-image-repeat: initial;
+}
+/* */
+.labelss {
+    text-decoration-color: #808080!important;
+    font-size: 12px;
+    font-weight: normal;
+    margin-left: 100px;
+    margin-top:10px;
+}
+.labelssu{
+	text-decoration-color: #808080!important;
+    font-size: 12px;
+    font-weight: normal;	
+    margin-top: 15px;
+    font-family: roboto !important;
+}
+/* */
+.labelsb{
+	text-decoration-color: #808080!important;
+    font-size: 12px;
+    font-weight: normal;
+    margin-top: 5px;
+}
+/* */
+.texted {
+    margin-left:60px !important;
+}
+/* */
+.labelsa {
+    text-decoration-color: #808080!important;
+    font-size: 13px;
+    font-weight: normal;
+    font-family: roboto !important;
+}
+/* */
+.labelst{
+	text-decoration-color: #808080!important;
+    font-size: 12px;
+    font-weight: normal;
+    margin-top: 30px;
+    font-family: roboto !important;
+    margin-left: -15px;
+}
+.dropdowns{
+	margin-top: 30px !important;
+	margin-left: 85px;
+}
+.labellt{
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: bold;
+    margin-left: -15px;
+}
+.labelsn{
+	text-decoration-color: #808080!important;
+    font-size: 13px;
+    font-weight: normal;
+    font-family: roboto !important;
+     margin-top:12px;
+}
+.labelsb{
+	text-decoration-color: #808080!important;
+    font-size: 12px;
+    font-weight: normal;
+    font-family: roboto !important;
+     margin-top:10px;	
+}
+.labelsj{
+	font-size: 13px;
+    font-weight: bold;
+    margin-left: 100px;	
+    font-family: roboto !important;
+}
+.survey{
+	font-size: 22px;
+    font-weight: bold;	
+    font-family: roboto !important;
+}
+.surveyer{
+	cursor: default;
+	display: inline-block;
+    max-width: 100%;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+.labelslo{
+	text-decoration-color: #808080!important;
+    font-size: 13px;
+    font-weight: normal;
+    font-family: roboto !important;	
+}
+/* /
+.labelsh{
+	text-decoration-color: #808080!important;
+    font-size: 13px;
+    font-weight: normal;
+    font-family: roboto !important;
+    margin-top:10px;
+}
+.image{
+	vertical-align: middle !important;
+	margin-top: 15px !important;
 }
