--- a/src/main/resources/templates/admin/fragment/top.html
+++ b/src/main/resources/templates/admin/fragment/top.html
@@ -39,6 +39,7 @@
                     </li>
                 </div>           
             </div>
+            
             <div class="collapse navbar-collapse" >
                  <ul class="nav navbar-nav side-nav" id="list">
                     <li>
@@ -46,17 +47,18 @@
                     </li>
                 	<div class="list" id="list">
                     <li>
-                       <a class="btned btns-primary btned-blocks btned-default" th:href="@{/admin/index}">Dashboard<i class="icon-dashboard"></i></a>
+                       <a class="btned btns-primary btned-blocks" th:href="@{/admin/index}">Dashboard<i class="icon-dashboard"></i></a>
                     </li>
                     <li>
-                       <a class="btned btns-primary btned-blocks btned-default" th:href="@{/admin/user}">User <i class="icon-user_icon"></i></a>
+                       <a class="btned btns-primary btned-blocks" th:href="@{/admin/user}">User <i class="icon-user_icon"></i></a>
                     </li>
                     <li>
-                       <a class="btned btns-primary btned-blocks btned-default" th:href="@{/admin/map}">Map <i class="icon-maps"></i></a>
+                       <a class="btned btns-primary btned-blocks" th:href="@{/admin/map}">Map <i class="icon-maps"></i></a>
                     </li>
                 </div>
                 </ul>
             </div>
+            
         </div>
     </div>
 </body>
