--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -14,29 +14,22 @@
 <link rel="stylesheet" th:href="@{/css/style.css}" />
 <link rel="stylesheet" th:href="@{/css/fonts/icon-edit/style.css}" />
 <link rel="stylesheet" th:href="@{/font-awesome/css/font-awesome.css}" />
-<link href="https://fonts.googleapis.com/css?family=Roboto"
-	rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans"
-	rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 	<script th:src="@{/js/jquery.js}"></script>
 	<script th:src="@{/js/bootstrap.min.js}"></script>
-	<script th:src="@{/js/app.min.js}"></script>
-	<!-- <script th:src="@{/js/jquery.slimscroll.min.js}"></script> -->
 	<script src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>
-	 <script th:src="@{/lib/jquery.spring-friendly.js}"></script> 
-	 
-
+	<script th:src="@{/lib/jquery.spring-friendly.js}"></script> 
+	
 <title>Page</title>
 </head>
 <body>
 	<div id="wrapper">
 		<div th:replace="/admin/fragment/top :: top-header"></div>
 		<div id="page-wrapper">
-			 <div class="padding-md content content-list" layout:fragment="content">
-            </div>
+			 <div class="padding-md content content-list" layout:fragment="content"></div>
 		</div>
 	</div>
-
 </body>
 </html>
