--- a/src/main/resources/templates/admin/page/user.html
+++ b/src/main/resources/templates/admin/page/user.html
@@ -66,15 +66,14 @@ $(document).ready(function(){
 												<label-s style="margin-left: 30px;"> Nama Lengkap
 												</label-s>
 												<input type="text" name="name" value=""
-													placeholder="Ketik Nama Lengkap" class="form-controls"
-													id="name" maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
+													placeholder="Ketik Nama Lengkap" class="form-controls" required id="name" maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 
 											</div>
 
 											<div class="form-group has-feedback" class="form-create">
 												<label-s style="margin-left: 30px;"> Email </label-s>
 												<input type="email" name="username" value="" 
-													placeholder="Ketik Email" class="form-controls"  data-parsley-type="email" data-parsley-trigger="keyup" id="username"
+													placeholder="Ketik Email" class="form-controls" required data-parsley-type="email" data-parsley-trigger="keyup" id="username"
 													 maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 											</div>
 
@@ -82,15 +81,14 @@ $(document).ready(function(){
 												<label-s style="margin-left: 30px;"> Nomor Telepon
 												</label-s>
 												<input type="text" name="phone" value=""
-													placeholder="Ketik Nomor Telepon" class="form-controls" data-parsley-pattern="^\d{4} \d{4} \d{4}$" id="phone"  maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
+													placeholder="Ketik Nomor Telepon" class="form-controls" required data-parsley-pattern="^\d{4} \d{4} \d{4}$" id="phone"  maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 
 											</div>
 
 											<div class="form-group has-feedback" class="form-create">
 												<label-s style="margin-left: 30px;"> Password </label-s>
 												<input type="password" name="plainPassword" value=""
-													placeholder="Ketik Password" class="form-controls"
-													id="plainPassword" maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
+													placeholder="Ketik Password" class="form-controls" required id="plainPassword" maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 											</div>
 											<!-- penting to change -->
 											<div class="actions">
